--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/customer-add.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/customer-add.html
@@ -58,6 +58,7 @@
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script th:fragment="sidebarScript" >
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
