--- a/finalModule/finalModule/src/main/resources/templates/admin/brand/listBrand.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/brand/listBrand.html
@@ -147,6 +147,7 @@
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/deleteMultipleBrand.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:fragment="sidebarScript" >
   // Toggle sidebar
