--- a/finalModule/finalModule/src/main/resources/templates/admin/category/listCategory.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/category/listCategory.html
@@ -128,7 +128,6 @@
                             <label class="form-label">Mô Tả</label>
                             <textarea type="text" class="form-control" id="editCategoryDescription" name="description" required></textarea>
                         </div>
-
                         <button type="submit" class="btn btn-primary">Lưu</button>
                     </form>
                 </div>
@@ -140,6 +139,8 @@
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/deleteMultipleCategory.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:fragment="sidebarScript" >
     // Toggle sidebar
@@ -159,3 +160,6 @@
 </script>
 </body>
 </html>
+
+
+
