--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/customer-table.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/customer-table.html
@@ -173,9 +173,9 @@
     </div>
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
-<script th:src="@{/js/admin/layout.js}">
+<script th:src="@{/js/admin/layout.js}"></script>
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 
-</script>
 <script th:fragment="sidebarScript" >
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
