--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/editEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/editEmployee.html
@@ -96,6 +96,7 @@
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script th:fragment="sidebarScript">
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
