--- a/finalModule/finalModule/src/main/resources/templates/admin/layout/layout.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/layout/layout.html
@@ -16,55 +16,10 @@
 <body>
 <div th:replace="~{admin/fragments/header :: header}"></div>
 <div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
-<main class="main-content" th:fragment="content">
-<!--  <div class="wrapper col-md-9 container mt-4" >-->
-<!--    <h1 class="tittle mb-4">Quản lý nhân viên</h1>-->
-<!--    <div class="form-mb-4">-->
-<!--      <div class="search-container">-->
-<!--        <form class="search-form">-->
-<!--          <select class="input-select">-->
-<!--            <option value="0">Tên</option>-->
-<!--            <option value="1">Số điện thoại</option>-->
-<!--            <option value="2">Công việc</option>-->
-<!--          </select>-->
-<!--          <input class="form-control form-control-sm" type="search" placeholder="Tìm kiếm nhân viên..." aria-label="Search">-->
-<!--          <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">-->
-<!--            <i class="fas fa-search"></i>-->
-<!--          </button>-->
-<!--        </form>-->
-<!--        <a href="/Admin/employee-manager/create" class="btn-create btn btn-success">Thêm Nhân Viên</a>-->
-<!--      </div>-->
-<!--      <hr style="border: 1px solid #333333; margin-top: 8px;">-->
-<!--    </div>-->
-<!--    <table class="table table-striped table-bordered">-->
-<!--      <thead class="table-dark">-->
-<!--      <tr>-->
-<!--        <th>ID</th>-->
-<!--        <th>Tên Nhân Viên</th>-->
-<!--        <th>Địa chỉ</th>-->
-<!--        <th>Email</th>-->
-<!--        <th>Thao tác</th>-->
-<!--      </tr>-->
-<!--      </thead>-->
-<!--      <tbody>-->
-<!--      <tr th:each="employee : ${employees}">-->
-<!--        <td th:text="${employee.employeeId}"></td>-->
-<!--        <td th:text="${employee.name}"></td>-->
-<!--        <td th:text="${employee.address}"></td>-->
-<!--        <td th:text="${employee.email}"></td>-->
-<!--        <td>-->
-<!--          <a th:href="@{/admin-home/employee-manager/edit/{employeeId}(employeeId=${employee.employeeId})}" class="btn btn-warning btn-sm">Chỉnh sửa</a>-->
-<!--          <form th:action="@{/admin-home/employee-manager/delete/{employeeId}(employeeId=${employee.employeeId})}" method="post" class="d-inline">-->
-<!--            <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc chắn muốn xóa không?')">Xóa</button>-->
-<!--          </form>-->
-<!--        </td>-->
-<!--      </tr>-->
-<!--      </tbody>-->
-<!--    </table>-->
-<!--  </div>-->
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script th:fragment="sidebarScript" >
   // Toggle sidebar
   document.getElementById('sidebar-toggle').addEventListener('click', () => {
