--- a/finalModule/finalModule/src/main/resources/templates/admin/suppliers/list.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/suppliers/list.html
@@ -240,6 +240,7 @@
     }
   }
 </script>
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script>
   // Xử lý chọn/bỏ chọn tất cả
   document.getElementById('selectAll').addEventListener('change', function() {
