--- a/finalModule/finalModule/src/main/resources/templates/admin/warehouse/list.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/warehouse/list.html
@@ -70,5 +70,6 @@
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 </body>
 </html>
