--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/listCustomer.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/listCustomer.html
@@ -115,7 +115,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="item, c : ${customers}">
+                <tr th:each="item, c : ${customers.getContent()}">
                     <td>
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input customerCheckbox"
@@ -149,7 +149,7 @@
         </form>
 
         <!-- Modal chỉnh sửa khách hàng -->
-        <div th:each="item : ${customers}" th:id="'editCustomerModal-' + ${item.customerId}"
+        <div th:each="item : ${customers.getContent()}" th:id="'editCustomerModal-' + ${item.customerId}"
              class="modal fade" tabindex="-1" aria-labelledby="editCustomerModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -159,16 +159,16 @@
                     </div>
                     <div class="modal-body">
                         <form th:action="@{/Admin/customers/update}" method="POST">
-                            <input type="hidden" name="id" th:value="${item.customerId}">
+                            <input type="hidden" name="customerId" th:value="${item.customerId}">
 
                             <div class="mb-3">
                                 <label class="form-label">Họ và Tên:</label>
-                                <input type="text" class="form-control" name="fullName" th:value="${item.customerName}" required>
+                                <input type="text" class="form-control" name="customerName" th:value="${item.customerName}" required>
                             </div>
 
                             <div class="mb-3">
                                 <label class="form-label">Số điện thoại:</label>
-                                <input type="text" class="form-control" name="phone" th:value="${item.phoneNumber}" required>
+                                <input type="text" class="form-control" name="phoneNumber" th:value="${item.phoneNumber}" required>
                             </div>
 
                             <div class="mb-3">
@@ -196,6 +196,7 @@
                 </div>
             </div>
         </div>
+
 
 
 
