--- a/finalModule/finalModule/src/main/resources/templates/admin/business/home.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/business/home.html
@@ -11,7 +11,7 @@
     <p>Tài khoản: <span th:text="${username}"></span></p>
     <p>Loại tài khoản: <span th:text="${role}"></span></p>
     <div class="section">
-    <button onclick="location.href='/admin/profile'">Quản lý thông tin cá nhân</button>
+    <button onclick="location.href='/account'">Quản lý thông tin cá nhân</button>
     <button onclick="location.href='/business/reports'">Quản lý báo cáo</button>
     </div>
 <div class="section">
