--- a/finalModule/finalModule/src/main/resources/templates/admin/home.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/home.html
@@ -19,7 +19,7 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h3 class="card-title">Admin</h3>
-                    <button class="btn btn-primary w-100 mb-2" onclick="location.href='/admin/profile'">Quản lý thông tin cá nhân</button>
+                    <button class="btn btn-primary w-100 mb-2" onclick="location.href='/account'">Quản lý thông tin cá nhân</button>
                     <button class="btn btn-primary w-100" onclick="location.href='/Admin'">Quản lý nhân viên</button>
                 </div>
             </div>
