--- a/finalModule/finalModule/src/main/resources/templates/admin/home.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/home.html
@@ -43,7 +43,7 @@
             <div class="card shadow-sm">
                 <div class="card-body">
                     <h3 class="card-title">Bán hàng</h3>
-                    <button class="btn btn-warning w-100" onclick="location.href='/sales/management'">Quản lý bán hàng</button>
+                    <button class="btn btn-warning w-100" onclick="location.href='/sales/report'">Quản lý bán hàng</button>
                 </div>
             </div>
         </div>
