--- a/finalModule/finalModule/src/main/resources/templates/admin/sales/home.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/sales/home.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="section">
-        <button onclick="location.href='/sales/management'">Quản lý bán hàng</button>
+        <button onclick="location.href='/sales/report'">Quản lý bán hàng</button>
     </div>
 
 
