--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -44,7 +44,7 @@
         </a>
       </li>
       <li>
-        <a th:href="@{/Admin/warehouse}">
+        <a th:href="@{/Admin/ware-houses}">
           <i class="fa-solid fa-warehouse"></i> <span>Quản lý Kho</span>
         </a>
       </li>
