--- a/finalModule/finalModule/src/main/resources/templates/admin/warehouse/warehouse-table.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/warehouse/warehouse-table.html
@@ -89,12 +89,14 @@
                     </div>
                     <div class="col-12">
                         <div class="d-flex justify-content-between align-items-center">
-                            <a th:href="@{/Admin/ware-houses/import}" class="btn btn-primary btn-sm py-2">
-                                <i class="fas fa-plus-circle me-1"></i>Nhập kho
-                            </a>
-                            <a th:href="@{/Admin/ware-houses/export}" class="btn btn-primary btn-sm py-2">
-                                <i class="fas fa-plus-circle me-1"></i>Xuất kho
-                            </a>
+                            <div>
+                                <a th:href="@{/Admin/ware-houses/import}" class="btn btn-primary btn-sm py-2">
+                                    <i class="fas fa-arrow-down me-1"></i>Nhập kho
+                                </a>
+                                <a th:href="@{/Admin/ware-houses/export}" class="btn btn-warning btn-sm py-2 text-dark">
+                                    <i class="fas fa-arrow-up me-1"></i>Xuất kho
+                                </a>
+                            </div>
                             <a th:href="@{/Admin/transactions/history}" class="btn btn-success btn-sm py-2">
                                 <i class="fas fa-history me-1"></i>Lịch sử xuất/nhập kho
                             </a>
