--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
@@ -89,7 +89,7 @@
                 <th>Địa Chỉ</th>
                 <th>SĐT</th>
                 <th>Công việc</th>
-                <th>Hành động</th>
+                <th>Thao tác</th>
                 <th>Trạng thái</th>
             </tr>
             </thead>
