--- a/finalModule/finalModule/src/main/resources/templates/admin/order/listOrder.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/order/listOrder.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<a th:href="@{order/add}">Chuyen trang</a>
+<a th:href="@{Admin/order/add}">Chuyen trang</a>
 </body>
 </html>
