--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/listCustomer.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/listCustomer.html
@@ -254,7 +254,7 @@
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/deleteMultipleCustomer.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script th:fragment="sidebarScript">
+<script th:fragment="sidebarScript"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 
 <script th:fragment="sidebarScript" >
@@ -263,5 +263,6 @@
         document.body.classList.toggle('sidebar-collapsed');
     });
 </script>
+
 </body>
 </html>
